# pyneng-cli-course

./: README.md  pyneng.py  pyproject.toml  setup.cfg  setup.py
src/pyneng/: __init__.py  __main__.py  pyneng.py
src/pyneng-cli-course/: __init__.py
src/pyneng_cli_course/: __init__.py  pyneng.py  utils.py
