[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyneng"
version = "2.1.0"
description = "CLI tool to run tests in pyneng book/course"
readme = "README.md"
authors = [{ name = "Natasha Samoylenko", email = "natasha.samoylenko@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cli", "tutorial"]
dependencies = [
	"Click",
	"pyyaml",
	"pytest",
	"pytest-clarity",
	"pytest-json-report",
	"requests",
	"PyGithub",
	"six",
	"jinja2",
	"textfsm",
]
requires-python = ">=3.7"

#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/natenka/pyneng-cli"

[project.scripts]
pyneng = "pyneng.pyneng:cli"

[project.entry-points]
